crates/nirvash-macros/tests/fixtures/subsystem_spec_invalid_symmetry.stderr
error: use the #[invariant(SpecType)] form instead
  --> tests/fixtures/subsystem_spec_invalid_symmetry.rs:15:18
   |
15 | #[subsystem_spec(invariants(legacy_invariant))]
   |                  ^^^^^^^^^^
